# tusk

./: .gitignore  .prettierignore  PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  vitest.config.ts
docs/superpowers/plans/: 2026-04-28-week-2-postgres-mvp.md  2026-04-28-week-3-result-editing.md  2026-04-29-week-6-pgvector-integration.md  (+7 more)
infra/postgres/: docker-compose.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/commands/: ai_secrets.rs  ai_tools.rs  cancel.rs  connections.rs  destructive.rs  editing.rs  explain.rs  export.rs  fk_lookup.rs  history.rs  mod.rs  query.rs  schema.rs  schema_index.rs  sqlast.rs  ssh.rs  transactions.rs  vector.rs
src-tauri/src/db/: decoder.rs  embedding_http.rs  embedding_store.rs  explain_runner.rs  mod.rs  pg_literals.rs  pg_meta.rs  pg_stats.rs  pool.rs  schema_embed.rs  state.rs  vector_introspect.rs
src-tauri/src/ssh/: config.rs  mod.rs  tunnel.rs
src-tauri/tests/: ai_secrets.rs  cancel.rs  common.rs  decoder.rs  editing.rs  embedding_http.rs  explain_smoke.rs  history.rs  pg_meta.rs  postgres_integration.rs  transactions.rs  vector.rs
src/hooks/: use-theme.ts
src/lib/: confirm.tsx  keychain.ts  pgLiterals.test.ts  pgLiterals.ts  sql.ts  tauri.ts  types.ts
src/store/: ai.ts  connections.ts  history.ts  pendingChanges.test.ts  pendingChanges.ts  schema.ts  schemaIndex.ts  settings.ts  tabs.ts  transactions.ts  useVectorActions.ts  useVectorMeta.ts
(+98 files in other folders)
